# chikuwa

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  release-plz.toml
.claude/: settings.json
.github/workflows/: pr.yaml  release-plz.yaml  release.yaml  reusable-check-github-actions.yaml  reusable-check-rust.yaml
src/: app.rs  event.rs  git.rs  hook.rs  ipc.rs  main.rs  usage.rs
src/agent/: state.rs
src/tmux/: client.rs  types.rs
src/ui/: mod.rs  status_bar.rs  theme.rs  tree.rs
