[package]
name = "chikuwa"
version = "0.1.5"
edition = "2021"
description = "tmux AI Agent monitor TUI"
license = "Apache-2.0"
repository = "https://github.com/nownabe/chikuwa"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"

[dev-dependencies]
